--- a/web-design-for-kids-typography.html
+++ b/web-design-for-kids-typography.html
@@ -1,45 +1,45 @@
 ﻿<div class="post-body__content">
-<h1> การทำเว็บไซต์สำหรับเด็ก - รูปแบบตัวอักษร (Typography) </h1>
-<p> ยินดีต้อนรับสู่บทเรียนที่เก้าของซีรีย์ <a href="https://webdesign.tutsplus.com/series/web-design-for-kids--cms-823" target="_self">การทำเว็บไซต์สำหรับเด็กของเรา</a> วันนี้เรามาคุยกันกับการออกแบบตัวอักษร </p>
-<p> ในบทเรียนนี้ เราจะเจาะลึกเกี่ยวกับรูปแบบตัวอักษรและทุกอย่างที่เกี่ยวกับมัน ทำไมมันถึงสำคัญสำหรับการออกแบบของเรา  เราได้เคยคุยเกี่ยวกับประสบการณ์ผู้ใช้งานจำนวนมาก ดังนั้นและบทเรียนนี้ก็ไม่มีข้อยกเว้น เราจะทำงานอย่างหนักเพื่อให้แน่ใจว่าตัวอักษรของเรานั้นดูดีและง่ายต่อการอ่าน </p>
+<h1> การทำเว็บไซต์สำหรับเด็ก - การออกแบบตัวอักษร (Typography) </h1>
+<p> ยินดีต้อนรับสู่บทเรียนที่เก้าของซีรีย์ <a href="https://webdesign.tutsplus.com/series/web-design-for-kids--cms-823" target="_self">การทำเว็บไซต์สำหรับเด็กของเรา</a> วันนี้เรามาคุยเกี่ยวกับการออกแบบตัวอักษรกัน </p>
+<p> ในบทเรียนนี้ เราจะเจาะลึกเกี่ยวกับรูปแบบตัวอักษรและทุกอย่างที่เกี่ยวกับมัน ทำไมมันถึงสำคัญสำหรับการออกแบบ  เราได้เคยคุยเกี่ยวกับประสบการณ์ผู้ใช้งานจำนวนมาก ดังนั้นและบทเรียนนี้ก็ไม่มีข้อยกเว้น เราจะทำงานอย่างหนักเพื่อให้แน่ใจว่าตัวอักษรของเราทุกตัวนั้นดูดีและง่ายต่อการอ่าน </p>
 <p> อย่าลืมที่จะถามคำถามในกล่องคอมเม้นต์ด้านล่างของบทเรียนนี้ได้เลย </p>
 <h2> จริงๆ แล้วการออกแบบตัวอักษรคืออะไร </h2>
-<p> การออกแบบตัวอักษรมีอยู่แทบทุกที่  มันคือวิธีการที่เรามองเห็นอักษรที่เราเขียนขึ้น ดังนั้นทุกๆที่ที่เราเห็นตัวอักษรเราจะเห็นการออกแบบตัวอักษรอยู่ด้วย  ซึ่งคำเหล่านี้สามารถพบได้บนหน้าจอ กระดาษ หรือ ป้ายต่างๆ รอบๆ ตัวเรา </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/banner9.svg"></figure><p> ด้วยการออกแบบตัวอักษร เราสามารถเปลี่ยน &quot;อารมณ์และความรู้สึก&quot; ของคำเหล่านี้ เปลี่ยนมันเพื่อดึงดูดผู้เข้าชม  การออกแบบอักษรคำต่อคำนั้นบ่อยครั้งสร้างผลกระทบกับผู้ใช้งานก่อนที่พวกเขาจะตัดสินใจลงมืออ่านเนื้อหาจริงๆ เสียอีก ดังนั้นมันสำคัญมากที่การออกแบบนั้นจะให้ความรู้สึกโดยรวมและตัวอักษรของเรานั้นเทียบกับความรู้สึกของเนื้อหาด้วยตัวของมันเอง </p>
-<p> <a href="http://webdesign.tutsplus.com/tutorials/web-design-for-kids-design-basics--cms-24176" target="_self">ในบทเรียนที่ผ่านมา</a> เราได้คุยว่าเนื้อหานั้นมีความสำคัญอย่างไร  หลังจากนั้น มันไม่ใช่ประเด็นสำคัญว่าเว็บไซต์ของเราจะดูดีแค่ไหนถ้ามันไม่มีข้อมูลที่ทุกคนต้องการอ่านมัน  วิธีการที่เรานำเสนอคำเหล่านั้นให้แก่ผู้ใช้ อย่างไรก็ตาม มันกลายเป็นส่วนใหญ่ของข้อความที่คำนั้นแสดงตัวมันเองออกมา </p>
-<h3> Typeface vs. Fonts </h3>
+<p> การออกแบบตัวอักษรมีอยู่แทบทุกที่  มันคือมุมมองที่เรามีต่อตัวอักษรที่เราเขียนขึ้น ดังนั้นทุกๆที่ที่เราเห็นตัวอักษรมันจะมีเรื่องการออกแบบตัวอักษรเข้ามาเกี่ยวข้องด้วย  ซึ่งตัวอักษรสามารถพบได้บนหน้าจอ กระดาษ หรือ ป้ายต่างๆ รอบๆ ตัวเรา </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/banner9.svg"></figure><p> ด้วยการออกแบบตัวอักษร เราสามารถเปลี่ยน &quot;มุมมองและความรู้สึก (look and feel)&quot;  ของอักษรเหล่านี้เพื่อดึงดูดผู้เข้าชม  การออกแบบตัวอักษรคำต่อคำนั้นบ่อยครั้งสร้างผลกระทบกับผู้ใช้งานก่อนที่พวกเขาจะตัดสินใจลงมืออ่านเนื้อหาจริงๆ เสียอีก ดังนั้นมันสำคัญมากที่การออกแบบนั้นจะให้ความรู้สึกโดยรวมและตัวอักษรของเรานั้นเทียบกับความรู้สึกของเนื้อหาได้ด้วยตัวของมันเอง </p>
+<p> <a href="http://webdesign.tutsplus.com/tutorials/web-design-for-kids-design-basics--cms-24176" target="_self">ในบทเรียนที่ผ่านมา</a> เราได้คุยว่าเนื้อหานั้นมีความสำคัญอย่างไร  หลังจากนั้น มันไม่ใช่ประเด็นสำคัญว่าเว็บไซต์ของเราจะดูดีแค่ไหนถ้ามันไม่มีข้อมูลที่คนต้องการอ่าน  วิธีการที่เรานำเสนอคำเหล่านั้นให้แก่ผู้ใช้ อย่างไรก็ตามมันจะดีที่สุดถ้าข้อความเหล่านั้นแสดงตัวด้วยตัวมันเองออกมา โดยไม่ต้องอ่าน </p>
+<h3> ความต่างระหว่าง Typeface กับ Font </h3>
 <p> การออกแบบตัวอักษรนั้นเกี่ยวข้องกับคำจำกัดความเหล่านี้ </p>
-<p> <em>Typeface</em> คือการออกแบบทั่วๆ ไปของชุดตัวอักษร (คำและสัญลักษณ์) ขณะที่ <em>font</em> นั้นจะระบุขนาดที่เฉพาะเจาะจง น้ำหนัก (ความหนาของอักษรแต่ละตัว) สไตล์ และการใช้ typeface </p>
-<p> การออกแบบเมืองของเราใช้ <i>typeface</i> เรียกว่า &quot;Open Sans&quot;  เราใช้ขนาดตัวอักษรที่ต่างกันและน้ำหนักของ typeface ชนิดนี้ ที่ซึ่งบอกพวกเราว่า <i>fonts</i> อันไหนควรโหลดเข้ามาในเพจ </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/heading9.svg"></figure><p> ดังนั้น ขณะที่เราใช้ฟ้อนท์ของเว็บไซต์ของเรา ฟ้อนท์เหล่านี้อยู่บนพื้นฐานของ typeface ที่บางคนใช้เวลาอย่างมากในการออกแบบมันขึ้นมา </p>
-<h3> Serif vs. Sans-Serif </h3>
-<p> Typeface นั้นมีชนิด <em>serif</em> หรือ <em>sans-serif</em>  ชนิด <i>serif</i> นั้นดีในการอธิบายง่ายๆ ว่ามันมีส่วนที่ยื่นออกมาท้ายจุดสิ้นสุดของตัวอักษร </p>
-<p> จากรูป Typeface ชนิด serif จะมีส่วนยื่นออกมาแบบนี้ </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/serif9.svg"></figure><p> Open Sans คือชนิด sans-serif typeface มันหมายถึง <i>ไม่เป็น</i> serif  Typeface ชนิด sans-serif นั้นจะไม่มีส่วนยื่นออกมาเหมือนกับด้านบน </p>
+<p> <em>Typeface</em> คือแบบทั่วๆ ไปของชุดตัวอักษร (คำและสัญลักษณ์) ขณะที่ <em>font</em> นั้นจะระบุขนาดที่เฉพาะเจาะจง น้ำหนัก (ความหนาของอักษรแต่ละตัว) สไตล์ โดยเป็นรายละเอียดใน typeface อีกทีหนึ่ง </p>
+<p> การออกแบบเมืองของเราใช้ <i>typeface</i> เรียกว่า &quot;Open Sans&quot;  เราใช้ขนาดตัวอักษรที่ต่างกันและน้ำหนักของ typeface ชนิดนี้ ที่ซึ่งบอกพวกเราว่า <i>font</i> อันไหนควรโหลดเข้ามาในเพจ </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/heading9.svg"></figure><p> ดังนั้น ขณะที่เราใช้ Font ของเว็บไซต์ของเรา Font เหล่านี้อยู่บนพื้นฐานของ Typeface ที่บางคนใช้เวลาอย่างมากในการออกแบบมันขึ้นมา </p>
+<h3> ความต่างระหว่าง Serif กับ Sans-Serif </h3>
+<p> Typeface นั้นมีชนิด S<em>erif</em> กับ S<em>ans-serif</em>  ชนิด <i>Serif</i> นั้นอธิบายได้แบบง่ายที่สุดว่า มันมีส่วนที่ยื่นออกมาท้ายจุดสิ้นสุดของตัวอักษร </p>
+<p> จากรูป Typeface ชนิด Serif จะมีส่วนยื่นออกมาแบบนี้ </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/serif9.svg"></figure><p> Open Sans คือ Typeface ชนิด Sans-serif ชนิดหนึ่ง Sans-serif นั้นมีความหมายอีกอย่างหนึ่งคือ ไม่เป็น Serif  ซึ่ง Typeface ชนิด Sans-serif นั้นจะไม่มีส่วนยื่นออกมาเหมือนกับด้านบน </p>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/sansserif9.svg"></figure><p> มันไม่มีคำตอบที่ถูกหรือผิดเกี่ยวกับอะไรที่ควรใช้บนเว็บไซต์ของเราแต่เราจะต้องการมันเพื่อจัดการออกแบบโดยทั่วไปและให้ความรู้สึกที่เราเป็น พยายามที่จะยึดส่วนที่สามารถอ่านได้ง่ายที่สุด โดยอย่างยิ่งเฉพาะเจาะจงกับเลย์เอ้าท์และปริมาณตัวอักษร </p>
-<p> ชนิด serif typeface นั้นมักจะง่ายต่อการอ่านบนกระดาษหรือเมื่อมีข้อความอยู่มากๆ ขณะที่ sans-serif นั้นจะดีบนหน้าจอหรือตจำนวนเล็กน้อยทั้งหมด </p>
-<h2> ส่วนของ Typefaces </h2>
-<p> การฐานะที่ต้องการชนิดของตัวอักษรที่ดีที่สุดให้กับเว็บไซต์ของเรา เราต้องการคิดเกี่ยวกับอะไรที่ช่วยให้ชนิดตัวอักษรเหล่านี้แตกต่างจากพวกอื่นๆ  ยังมีส่วนต่างๆ อีกมากของ typeface แต่ละตัวที่บางคนได้ออกแบบและคิดเกี่ยวกับมันในรายละเอียดปลีกย่อยไว้แล้ว </p>
-<p> มันคือรายละเอียดที่ช่วยให้ตัวอักษรแต่ละอันนั้นเป็นรูปแบบเฉพาะตัว และมันขึ้นอยู่กับเราว่าจะเลือกอันไหนที่ทำงานได้ดีที่สุดสำหรับการออกแบบในสถานการณ์ที่แตกต่างกัน </p>
-<p> ลองมองดูคร่าวๆ ที่รายละเอียดบางอย่างของ typeface เพื่อให้เข้าใจมากยิ่งขึ้นว่าสิ่งเหล่านี้สามารถพัฒนาการออกแบบ (หรือทำให้แย่ลง) ได้อย่างไร </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/typeparts9.svg"></figure><p> มันไม่มีความจำเป็นที่จะต้องจำส่วนประกอบต่างๆ เหล่านี้ แต่แค่รู้ความแตกต่างของมันพวกมันนั้นช่วยให้เราดู typeface ชนิดพิเศษต่างๆ ได้ </p>
+<p> Typeface ชนิด Serif นั้นมักจะง่ายต่อการอ่านบนกระดาษหรือเมื่อมีข้อความอยู่มากๆ ขณะที่ Sans-serif นั้นจะดีบนหน้าจอคอมพิวเตอร์หรือมีตัวอักษรอยู่จำนวนเล็กน้อย </p>
+<h2> ส่วนประกอบของ Typefaces </h2>
+<p> วิธีการที่ต้องการชนิดของตัวอักษรที่ดีที่สุดให้กับเว็บไซต์ของเรา เราคิดเกี่ยวกับอะไรที่ช่วยให้ชนิดตัวอักษรเหล่านี้แตกต่างจากพวกอื่นๆ  ยังมีส่วนต่างๆ อีกมากของ Typeface แต่ละตัวที่บางคนได้ออกแบบและคิดเกี่ยวกับมันในรายละเอียดปลีกย่อยไว้แล้ว </p>
+<p> มันคือรายละเอียดที่ช่วยให้ตัวอักษรแต่ละอันนั้นมีรูปแบบเฉพาะตัว และมันขึ้นอยู่กับเราว่าจะเลือกอันไหนที่ทำงานได้ดีที่สุดสำหรับการออกแบบในสถานการณ์ที่แตกต่างกัน </p>
+<p> ลองมองดูคร่าวๆ ที่รายละเอียดบางอย่างของ typeface เพื่อให้เข้าใจมากขึ้นว่าสิ่งเหล่านี้สามารถพัฒนาการออกแบบ (หรือทำให้แย่ลง) ได้อย่างไร </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/typeparts9.svg"></figure><p> มันไม่มีความจำเป็นที่จะต้องจำส่วนประกอบต่างๆ เหล่านี้ แต่แค่รู้ความแตกต่างของมันนั้นช่วยให้เราดู Typeface ชนิดพิเศษต่างๆ ได้ </p>
 <h2> ช่องว่าง (Spacing) </h2>
-<p> ด้วยสิ่งที่ใกล้กับการออกแบบตัวอักษรมากที่สุด ช่องว่างนั้นสำคัญมากสุดๆ เมื่อต้องการประสบการณ์ที่ดีที่สุดให้ผู้ชม  The amount of spacing between each letter, between words, and between lines of words can make a huge difference to <em>readability</em>. </p>
-<p> Not enough spacing give us letters and words that are too bunched up to read well, while too much spacing will break everything up and be just as difficult to read and follow. </p>
-<p> Fonts come with their own spacing that is generally pretty nice to read, but let’s take a look at what all this different spacing is called and how to make changes in our CSS in case we ever need to in our designs. </p>
-<h2> Kerning &amp; Tracking </h2>
-<p> <em>Kerning</em> is the spacing between each character. </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/kerning9.svg"></figure><p> Each font we use will already have its own set of kerning rules, but we can make adjustments in our CSS if we want to, by using the <code class="inline">letter-spacing</code> property: </p>
+<p> สิ่งใกล้ตัวกับการออกแบบตัวอักษรมากที่สุด ช่องว่างนั้นสำคัญมากเมื่อต้องการประสบการณ์ที่ดีที่สุดให้ผู้ชม  จำนวนช่องว่างระหว่างตัวอักษรแต่ละตัว ระหว่างคำ และ ระหว่างบรรทัด สามารถสร้างความต่างอย่างยิ่งกับการอ่านได้ (<em>readability</em>) </p>
+<p> ไม่มีเนื้อที่ว่างมากพอที่จะให้เราใส่อักษรหรือคำที่จะเกาะกลุ่มกันเพื่ออ่านได้ ขณะที่พื้นที่ว่างจำนวนมากจะทำให้ทุกอย่างดูแตกแยกและยากต่อการอ่านและติดตาม </p>
+<p> Font ตามด้วยพื้นที่ว่างของมันเองที่โดยทั่วไปแล้วจะดีที่สุดต่อการอ่าน แต่ลองมองดูความต่างของช่องว่างและการเปลี่ยนแปลงใน CS ในกรณีที่เราทำในการออกแบบของเรา </p>
+<h2> Kerning และ Tracking </h2>
+<p> <em>Kerning</em> คือช่องว่างระหว่างตัวอักษรแต่ละตัว </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/kerning9.svg"></figure><p> สำหรับ Font มันจะมีกฏของ Kerning เตรียมไว้ให้แล้วสำหรับเรา แต่เราก็สามารถปรับมันได้ใน CSS ถ้าเราต้องการ ด้วยการใช้พร้อพเพอร์ตี้ letter-spacing </p>
 <pre class="brush: css noskimlinks noskimwords">h1 {
     letter-spacing: 5px;
 } </pre>
-<p> <em>Tracking</em> is the spacing between each group of characters, or words. </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/tracking9.svg"></figure><p> If the font does not provide enough tracking we can make changes to this spacing through the <code class="inline">word-spacing</code> property: </p>
+<p> <em>Tracking</em> คือช่องว่างระหว่างกลุ่มของตัวอักษร หรือคำ </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/tracking9.svg"></figure><p> ถ้า Font ไม่ให้ Tracking ที่เพียงพอ เราสามารถแก้ไขมันผ่านพร้อพเพอร์ตี้ <code class="inline">word-spacing</code> </p>
 <pre class="brush: css noskimlinks noskimwords">h1 {
     word-spacing: 15px;
 }</pre>
 <h2> Leading </h2>
-<p> <em>Leading</em> refers to the spacing between lines of sentences. </p>
+<p> <em>Leading</em> นั้นเกี่ยวกับช่องว่างระหว่างบรรทัด </p>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24341/image/leading9.svg"></figure><p> We can make adjustments to this spacing by giving a value that changes the default leading set by the font in use through the <code class="inline">line-height</code> property. </p>
 <pre class="brush: css noskimlinks noskimwords">p {
     line-height: 2;
