--- a/web-design-for-kids-wrap-up.html
+++ b/web-design-for-kids-wrap-up.html
@@ -53,36 +53,36 @@
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/neobrowser11.svg"></figure><p> ประโยชน์อื่นๆของบริการนี้คือคุณไม่ต้องการไปยุ่งเกี่ยวกับโดเมน (ที่อยู่ของเว็บไซต์ในรูปแบบอื่นๆ) หรือการซื้อโฮสติ้งและการติดตั้ง แม้ว่าจะเราจะลองวิธีนี้ถัดไปนี้เช่นกัน </p>
 <p><strong> สำคัญมาก! </strong>  มันเป็นไปได้ที่จะใช้โดเมนเนมแบบ custom กับ NeoCities โดยการไปที่การตั้งค่าเว็บไซต์ (site setting) หลังจากเริ่มติดตั้งและทำตามขั้นตอนที่ว่ามา แม้ว่าการทำแบบนี้ต้อง upgrade account ด้วยเงิน $5.00 USD (หรือประมาณ 150-200 บาท) เป็นรายเดือนก็ตาม </p>
 <h3> โดเมน (Domain) </h3>
-<p> โดเมนนั้นคือที่อยู่เว็บแบบ custom หรือชื่อกำหนดเองที่เราชอบเพื่อให้ผู้ชมเยี่ยมเว็บนั้นพิมพ์เข้าไป  This step was not necessary when we hosted our site files on NeoCities because it created a special Neocities address for us.  However, if we are looking to have a truly custom domain name (such as <em>tutsplustown.com</em> for example) we will have to purchase this name. </p>
-<p> As with our NeoCities username, our domain name will have to be unique as well; it may take some time to find a name that is not already taken. </p>
-<p> Here are a couple of services that allow us to purchase domain names once we create an account: </p>
+<p> โดเมนนั้นคือที่อยู่เว็บแบบ custom หรือชื่อกำหนดเองที่เราชอบเพื่อให้ผู้ชมเยี่ยมเว็บนั้นพิมพ์เข้าไป  ขั้นตอนนี้นั้นไม่จำเป็นเมื่อเราใช้โฮสต์ของ NeoCities เพราะว่ามันสร้าง address พิเศษจาก NeoCities ให้พวกเรา  อย่างไรก็ตาม ถ้าเรากำลังมองหาโดเมนเนมแบบ custom จริงๆ (เช่น tutsplustown.com เป็นต้น) เราจะต้องชื่อโดเมนเนมอันนี้ </p>
+<p> ด้วย NeoCities username ขงเรา โดเมนเนมนั้นจะ unique มันจะใช้เวลาบางช่วงค้นหาชื่อที่มันยังไม่ได้ถูกใช้ไป </p>
+<p> ที่นี่ยังมีบริการอีกจำนวนหนึ่งที่ช่วยให้เราซื้อโดเมนเนมเมื่อเราสร้าง account </p>
 <ul class="ul1">
 <li><a href="https://iwantmyname.com/"> I Want My Name </a></li> <li><a href="https://www.namecheap.com/"> Name Cheap </a></li> </ul>
-<p> The final step to set up a custom domain can be completed through the hosting service (like Neocities or BitBalloon mentioned below) once the files are transferred. </p>
-<h3> More Hosting Options </h3>
-<p> If we choose not to use NeoCities there are <a href="http://alignedleft.com/resources/cheap-web-hosting">a few other hosting companies</a> that stand out for being especially affordable and easier to use, but perhaps the one that stands out the most for these reasons is <a href="https://www.bitballoon.com/">BitBalloon</a>. </p>
-<p> BitBalloon is free to try but requires payment to include a custom domain, much like NeoCities.  The ease in which files can be dragged and dropped into the interface makes this a pretty exciting option for basic sites like Tuts+ Town. </p>
-<p> Once the files are transferred we can complete the custom domain setup process through the tools within the BitBalloon dashboard. </p>
-<h3> Our Tuts+ Town Domain </h3>
-<p> Our Tuts+ Town site has its very own site address that was obtained and set up similar to the way we just reviewed: <a href="http://tutsplustown.com/">tutsplustown.com</a>. </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/browser11.svg"></figure><h2> What’s Next? </h2>
-<p> While this series provided an introduction to web design we may quickly end up wanting to advance our skills once we <i>practice, practice, practice</i> the topics we reviewed here. </p>
-<h3> More HTML &amp; CSS </h3>
-<p> The book “Build Your Own Website, <a href="http://www.amazon.com/Build-Your-Own-Website-WordPress/dp/1593275226/ref=sr_1_1?ie=UTF8&amp;qid=1436052494&amp;sr=8-1&amp;keywords=html+comic">A Comic Guide to HTML, CSS, and Wordpress</a>” by Nate Cooper provides a solid foundation to creating a site through a fun story told in a comic format. </p>
-<p> Shay Howe has written as series of in-depth tutorials on both beginner and advanced level HTML and CSS: </p>
+<p> และขั้นตอนสุดท้ายคือติดตั้งโดเมนเนมแบบ custom ที่สามารถทำให้เสร็จภายในบริการโฮสติ้ง (เช่น NeoCities หรือ BitBallon ที่จะกล่าวถึงถัดไป) เมื่อไฟล์ทั้งหมดของเราส่งขึ้นเว็บแล้ว </p>
+<h3> ตัวเลือกสำหรับโฮสติ้งอื่นๆ </h3>
+<p> ถ้าคุณไม่ต้องการเลือกใช้ NeoCities ยังมี <a href="http://alignedleft.com/resources/cheap-web-hosting">บริษัทโฮสติ้งอื่นๆ</a> ที่พร้อมจะช่วยเหลือและมันก็ใช้งานได้ง่าย และบางทีหนึ่งในนั้นที่โดดเด่นและดูสมเหตุสมผลคือ <a href="https://www.bitballoon.com/">BitBalloon</a> </p>
+<p> BitBalloon นั้นฟรีที่จะลองใช้และต้องเสียเงินถ้าคุณใช้ custom domain เหมือนกับ NeoCities  มันง่ายในการเลือกว่าไฟล์ไหนสามารถลากและวางเข้าไปในหน้าจอการใช้งาน มันจะให้ค่อนข้างตื่นเต้นสำหรับเว็บไซต์พื้นฐานเช่นเว็บไซต์เมืองในฝันของเรา </p>
+<p> เมื่อไฟล์ทั้งหมดเอาขึ้นเรียบร้อย เราสามารถจัดการกับ custom domain setup ผ่านเครื่องมือที่ BitBalloon ให้ไว้ใน dashboard </p>
+<h3> โดเมนเว็บเมืองในฝันของเรา </h3>
+<p> เว็บไซต์เมืองในฝันของเรามี address ของมันเองเหมือนกับที่เราได้ติดตั้งเราทดลองดูคือ <a href="http://tutsplustown.com/">tutsplustown.com</a> </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/browser11.svg"></figure><h2> แล้วถัดไปหล่ะ </h2>
+<p> ขณะที่ซีรีย์นี้ได้แนะนำตัวเกี่ยวกับการออกแบบเว้บ และ วิธีที่เร็วที่สุดสำหรับการพัฒนาทักษะฝีมือของเรา เราจำเป็นต้อง ฝึก ฝึก และ ฝึกด้วยหัวข้อด้านล่างนี้ </p>
+<h3> แหล่งความรู้ HTML และ CSS เพิ่มเติม </h3>
+<p> หนังสือ “Build Your Own Website, A Comic Guide to HTML, CSS, and Wordpress” เขียนโดย Nate Cooper จะให้ข้อมูลเกี่ยวการสร้างเว็บไซต์ผ่านเรื่องสนุกๆ ในรูปแบบการ์ตูน </p>
+<p> นอกจากนี้ Shay Howe ก็ได้เขียนซีรีย์ในระดับลึกสำหรับทั้งผู้เริ่มต้นและระดับสูงเกี่ยวกับ HTML และ CSS </p>
 <ul class="ul1">
-<li><a href="http://learn.shayhowe.com/html-css/"> HTML &amp; CSS for Beginers </a></li> <li><a href="http://learn.shayhowe.com/advanced-html-css/"> Advanced HTML &amp; CSS </a></li> </ul>
-<h3> Responsive Design </h3>
-<p> Responsive web design refers to designing sites that take different screen sizes into account.  We spend a lot of time on our smartphones, for example, and as designers we need to make sure our site works on these smaller screens as well as a full size desktop screen. </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/responsive11.svg"></figure><p> There’s a fantastic beginner <a href="http://learn.shayhowe.com/advanced-html-css/responsive-web-design/">tutorial by Shay Howe on the topic</a>. </p>
-<h3> Units of Measurement </h3>
-<p> We used pixels throughout this series as a unit of measurement on the web.  Using pixels is perfectly OK when getting started, however, the more experience you get the more you will realize how limiting they are.  It’s such an inflexible unit of measurement that does not perform well in responsive design. </p>
-<p> In terms of designing across different screen sizes there are <a href="http://demosthenes.info/blog/775/Which-CSS-Measurements-To-Use-When">several alternatives</a> that will be more flexible than pixels, such as <em>percentages</em> and <em>rems</em>. </p>
-<h3> Layout </h3>
-<p> While we briefly discussed flexbox in the CSS Layout tutorial there is a lot more we can accomplish with layouts using it.  There are a couple of super places for learning more, like this <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Complete Guide to Flexbox</a> and a <a href="http://jonibologna.com/flexbox-cheatsheet/">Flexbox Cheatsheet diagram</a>. </p>
-<p> Concerning layout as a whole and not just flexbox, there’s <a href="http://learnlayout.com/">a neat little site</a> that helps walk us through the basics. </p>
-<h2> Farewell! </h2>
-<p> While there is much more we can learn to strengthen and grow our web design skills, we have accomplished so much throughout this series and now have a much better understanding of the basics for both designing and building a site. </p>
-<p> We officially brought a website to life from sketches on paper to a real site with its very own web address; all in the day of a web designer! </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/farewell11.svg"></figure><p> Our <a href="http://tutsplus.github.io/web-design-for-kids/lesson-6/index.html" target="_self">Tuts+ Town website</a> will serve as a beautiful, easy to use guide for tourists considering visiting, so thanks for all your hard work. </p>
+<li><a href="http://learn.shayhowe.com/html-css/"> HTML และ CSS สำหรับผู้เริ่มต้น </a></li> <li><a href="http://learn.shayhowe.com/advanced-html-css/"> HTML และ CSS ระดับสูง </a></li> </ul>
+<h3> การสร้างเว็บไซต์แบบ Responsive Design </h3>
+<p> Responsive web design นั้นเกี่ยวกับการออกแบบเว็บไซต์ที่ทำให้หน้าจอต่างชนิดกันสามารถดูได้  เราจะใช้เวลาอย่างมากบน Smartphone ของเรา ยกตัวอย่างที่นักออกแบบ เราต้องการทำให้เว็บไซต์เหล่านี้ทำงานได้ดีในจอขนาดเล็กเหมือนกับจอขนาดใหญ่ของคอมพิวเตอร์ Desktop </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/responsive11.svg"></figure><p> และที่นี่ก็เหมาะเลยสำหรับผู้เริ่มต้น <a href="http://learn.shayhowe.com/advanced-html-css/responsive-web-design/">tutorial by Shay Howe on the topic</a> </p>
+<h3> หน่วยวัดต่างๆ (Units of Measurement) </h3>
+<p> เราได้ใช้หน่วย pixel ภายในซีรีย์นี้เป็นน่วยวัดบนเว็บ  การใช้ pixel นั้นค่อนข้าง OK เมื่อต้องเริ่มต้น อย่างไรก็ตาม ประสบการณ์ที่มากขึ้นจะทำให้คุณรู้ว่ามันมีข้อจำกัดอย่างไร  มันเป็นหน่วยหนึ่งที่ไม่ยืดหยุ่นเลย และมันใช้ได้ไม่ค่อยดีใน Responsive Design </p>
+<p> การฐานะการออกแบบข้ามจอหลายขนาด <a href="http://demosthenes.info/blog/775/Which-CSS-Measurements-To-Use-When">ยังมีตัวเลือกอื่นๆ</a> ที่ช่วยให้ pixel นั้นยืดหยุ่น เช่น <em>percentages</em> และ <em>rems</em> </p>
+<h3> เลย์เอ้าท์ </h3>
+<p> เมื่อเราจะคุยเรื่อง flexbox ใน CSS Layout ของบทเรียนนี้แล้ว มันยังมี Layout อีกหลายชนิดมากที่เราสามารถเรียนรู้เพื่อจะใช้มัน  มันมีสถานที่จำนวนหนึ่งสำหรับเรียนรู้ อย่างเช่นที่นี่ <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Complete Guide to Flexbox</a> และที่ <a href="http://jonibologna.com/flexbox-cheatsheet/">Flexbox Cheatsheet diagram</a> </p>
+<p> เกี่ยวข้องกับ layout หลากหลายชนิดโดยรวมไม่ใช่แค่ Flexbox และยังมี <a href="http://learnlayout.com/">เว็บไซต์เล็กๆ เรียบร้อยๆ</a> ที่ช่วยให้เราเดินทางกลับสู่พื้นฐาน </p>
+<h2> มาฉลองกัน! </h2>
+<p> ขณะที่มีเรื่องมากมายที่เราสามารถเรียนเพื่อทำให้ทักษะการออกแบบเว็บของเราแข็งแกร่งขึ้น เราได้ประสบความสำเร็จมากมายผ่านซีรีย์นี้และจากนี้เราก็สามารถเข้าใจอะไรได้มากขึ้นมากทั้งพื้นฐานการออกแบบ และ การสร้างเว็บไซต์ </p>
+<p> เราได้นำเว็บไซต์จากภาพร่างบนกระดาษสู่เว็บไซต์จริงๆ ที่มี address ของเราเอง นี่คือทุกๆ วันที่ผ่านไปของนักออกแบบเว็บ </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/farewell11.svg"></figure><p> เว็บไซต์เมืองในฝันของเรา จะสร้างความงดงามให้แก่ท่านผู้เข้ามาเยี่ยมชม มันใช้ง่ายและช่วยแนะนำเส้นทางให้แก่นักท่องเที่ยวใหม่ๆ ที่เข้ามาในเมือง ขอบพระคุณทุกท่านเป็นอย่างมากที่ติดตามซีรีย์นี้ตั้งแต่ต้นมา </p>
 </div> 
